Adding missing functionalities 2
